sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: '(' expected but identifier found.
			if echange(j, j+1)
                           ^AlgBubbleSort2:7: error: illegal start of simple expression
		}
                ^